fix about page align

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,45 +1,48 @@
-@import '../../../styles/base/colors';
+@import "../../../styles/base/colors";
 
 #about {
   padding: 80px 0;
   color: $gray;
 
-  .container{
+  .container {
     padding: 10px 10%;
 
-    .row{
+    .row {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
 
-      .about-col-1{
+      .about-col-1 {
         flex-basis: 35%;
 
-        @media only screen and (max-width: 600px){
+        @media only screen and (max-width: 600px) {
           flex-basis: 100%;
           margin-bottom: 30px;
         }
 
-        img{
+        img {
           width: 100%;
           border-radius: 15px;
         }
       }
 
-      .about-col-2{
+      .about-col-2 {
         flex-basis: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
 
-        @media only screen and (max-width: 600px){
+        @media only screen and (max-width: 600px) {
           flex-basis: 100%;
           font-size: 14px;
         }
 
-        .sub-title{
+        .sub-title {
           font-size: 60px;
           font-weight: 600;
           color: $light;
 
-          @media only screen and (max-width: 600px){
+          @media only screen and (max-width: 600px) {
             font-size: 40px;
           }
         }
@@ -49,33 +52,33 @@
           margin: 20px 0 40px;
         }
 
-          .tab-links{
-            margin-right: 50px;
-            font-size: 18px;
-            font-weight: 500;
-            cursor: pointer;
-            position: relative;
+        .tab-links {
+          margin-right: 50px;
+          font-size: 18px;
+          font-weight: 500;
+          cursor: pointer;
+          position: relative;
 
-            @media only screen and (max-width: 600px){
-              font-size: 15px;
-              margin-right: 20px;
-            }
-
-            &::after{
-              content: '';
-              width: 0;
-              height: 3px;
-              background: $blue;
-              position: absolute;
-              left: 0;
-              bottom: -8px;
-              transition: 0.5s;
-            }
+          @media only screen and (max-width: 600px) {
+            font-size: 15px;
+            margin-right: 20px;
           }
-          .active-link::after{
-            width: 50%;
+
+          &::after {
+            content: "";
+            width: 0;
+            height: 3px;
+            background: $blue;
+            position: absolute;
+            left: 0;
+            bottom: -8px;
+            transition: 0.5s;
           }
         }
+        .active-link::after {
+          width: 50%;
+        }
+      }
     }
   }
 }
